# bactars

./: .gitignore  Cargo.toml  README.md
examples/: crispr_only.rs
src/: amr_variant.rs  build_kofam.rs  build_psc.rs  cds.rs  crispr.rs  fasta.rs  feature.rs  gap.rs  gene_score.rs  hmm.rs  integron.rs  is_elements.rs  kofam.rs  lib.rs  localize.rs  mmseqs.rs  ncrna.rs  oric.rs  orit.rs  output.rs  pipeline.rs  plasmid.rs  prophage.rs  psc.rs  pseudogene.rs  pseudogene_align.rs  qc.rs  resolve.rs  setup_db.rs  signalox_sp.rs  sorf.rs  species.rs  start_refine.rs  tandem.rs  tmrna.rs  trna.rs  util_io.rs  vfdb.rs  xref.rs
